# Ido_course

./: .gitignore  README.md
exercises_day_1/: README.md  binary_search.c  dynamic_array  dynamic_array.c  insert_sort.c  quick_sort.c  unit_tests.c
exercises_day_2/: CMakeLists.txt  README.md  asynchron_incrument_value.cpp  main.cpp  threadSafeList.hpp  threadSafeList.inl
exercises_day_3/: README.md  isPrimeAsync.cpp  isPrimeSync.cpp  main.cpp  timeCounter.cpp
exercises_day_4/: CMakeLists.txt  IFplayer.hpp  connect4management.cpp  connect4management.hpp  gridPlay.cpp  gridPlay.hpp  humanPlayer.cpp  humanPlayer.hpp  main.cpp  minimaxPlayer.cpp  minimaxPlayer.hpp  randomComputerPlayer.cpp  randomComputerPlayer.hpp
